// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkDown render html without escaing it 1`] = `
<DocumentFragment>
  <div
    class="ejtitxs0 cache-ykhhhn"
  >
    <p>
      <span>
        Hello
      </span>
      <br />
      <span>
        World
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render paragraph inline 1`] = `
<DocumentFragment>
  .cache-kwaek9>p {
  display: inline;
}

<div
    class="ejtitxs0 cache-kwaek9"
  >
    <p>
      <span>
        I am a paragraph.
      </span>
    </p>
    <p>
      <span>
        And a second one
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render simple string 1`] = `
<DocumentFragment>
  .cache-ctjfsr {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

.cache-ctjfsr.cache-ctjfsr {
  margin-top: 0;
}

.cache-im4zsd {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #3F6ED8;
}

.cache-im4zsd:hover,
.cache-im4zsd:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-im4zsd:hover,
.cache-im4zsd:focus {
  color: #1e4293;
}

.cache-11lg13w {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #151A2D;
  background-color: #F6F6F8;
  padding: 8px;
}

<div
    class="ejtitxs0 cache-ykhhhn"
  >
    <h2
      class="e1g1zfwd0 cache-ctjfsr"
    >
      <span>
        I am a Markdown H1
      </span>
    </h2>
    <h2>
      <span>
        I am a Markdown H2
      </span>
    </h2>
    <p>
      <span>
        I am a simple markdown with 
      </span>
      <strong>
        <span>
          strong
        </span>
      </strong>
      <span>
         
      </span>
      <em>
        <span>
          italic
        </span>
      </em>
      <span>
         content
      </span>
    </p>
    <p>
      <span>
        You can find the complete reference 
      </span>
      <a
        class="e4bq1r51 cache-im4zsd"
        href="https://commonmark.org/help/"
      >
        <span>
          here
        </span>
      </a>
    </p>
    <p>
      <span>
        Invalid 
      </span>
    </p>
    <p>
      <span>
        I can also render code
      </span>
    </p>
    <p>
      <code
        class="e1g1zfwd0 cache-11lg13w"
      >
        const example = 1 // Inline code
      </code>
    </p>
    <pre>
      <code>
          const example = 2
      </code>
    </pre>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render simple string with target blank 1`] = `
<DocumentFragment>
  .cache-ctjfsr {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

.cache-ctjfsr.cache-ctjfsr {
  margin-top: 0;
}

.cache-im4zsd {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #3F6ED8;
}

.cache-im4zsd:hover,
.cache-im4zsd:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-im4zsd:hover,
.cache-im4zsd:focus {
  color: #1e4293;
}

.cache-ziq5xq {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  padding-left: 2px;
  opacity: 0.5;
}

.cache-ziq5xq.cache-ziq5xq {
  vertical-align: top;
}

.cache-11lg13w {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #151A2D;
  background-color: #F6F6F8;
  padding: 8px;
}

<div
    class="ejtitxs0 cache-ykhhhn"
  >
    <h2
      class="e1g1zfwd0 cache-ctjfsr"
    >
      <span>
        I am a Markdown H1
      </span>
    </h2>
    <h2>
      <span>
        I am a Markdown H2
      </span>
    </h2>
    <p>
      <span>
        I am a simple markdown with 
      </span>
      <strong>
        <span>
          strong
        </span>
      </strong>
      <span>
         
      </span>
      <em>
        <span>
          italic
        </span>
      </em>
      <span>
         content
      </span>
    </p>
    <p>
      <span>
        You can find the complete reference 
      </span>
      <a
        class="e4bq1r51 cache-im4zsd"
        href="https://commonmark.org/help/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          here
        </span>
        <svg
          class="e4bq1r50 etwatq50 cache-ziq5xq"
          viewBox="0 0 24 24"
        >
          <path
            d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
          />
        </svg>
      </a>
    </p>
    <p>
      <span>
        Invalid 
      </span>
    </p>
    <p>
      <span>
        I can also render code
      </span>
    </p>
    <p>
      <code
        class="e1g1zfwd0 cache-11lg13w"
      >
        const example = 1 // Inline code
      </code>
    </p>
    <pre>
      <code>
          const example = 2
      </code>
    </pre>
  </div>
</DocumentFragment>
`;
